<?xml version="1.0"?>
<package>
  <name>ekz-public-lib</name>
  <version>0.0.0</version>
  <description>The ekz-public-lib package</description>
  <maintainer email="ekz@kth.se">Johan Ekekrantz</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>libg2o</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>libg2o</run_depend>
  <run_depend>opencv</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
