<?xml version="1.0"?>
<package>
  <name>ekz_public_lib</name>
  <version>0.0.9</version>
  <description>The ekz_public_lib package</description>
  <maintainer email="ekz@kth.se">Johan Ekekrantz</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <!--<build_depend>libg2o</build_depend>-->
<!--  <build_depend>opencv2</build_depend>-->
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <!--<run_depend>libg2o</run_depend>-->
<!--  <run_depend>opencv2</run_depend>-->
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
