<?xml version="1.0"?>
<package>
  <name>metaroom_xml_parser</name>
  <version>0.0.7</version>
  <description>Metaroom XML parser</description>

  <maintainer email="raambrus@kth.se">Rares Ambrus</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>

  </export>
</package>
