<package>
  <name>nbv_planning</name>
  <version>0.0.10</version>
  <description>
	This package provides code for NBV planning.
  </description>
  <author>Chris Burbridge</author>
  <maintainer email="cburbridge@gmail.com">Chris Burbridge</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>  
  <build_depend>octomap_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>yaml-cpp</build_depend>

 <run_depend>roscpp</run_depend>
 <run_depend>sensor_msgs</run_depend>
 <run_depend>nav_msgs</run_depend>
 <run_depend>std_msgs</run_depend>
 <run_depend>std_srvs</run_depend>
 <run_depend>octomap</run_depend>
 <run_depend>octomap_msgs</run_depend>
 <run_depend>octomap_ros</run_depend>
 <run_depend>message_runtime</run_depend>
 <run_depend>tf_conversions</run_depend>
 <run_depend>eigen_conversions</run_depend>
 <run_depend>visualization_msgs</run_depend>
 <run_depend>yaml-cpp</run_depend>

</package>


